Time: 8 ms (89.01%), Space: 49.4 MB (9.58%) - LeetHub