@@ -1,14 +1,18 @@
 class Solution {
     public int[][] merge(int[][] intervals) {
-        Arrays.sort(intervals,(a,b)->Integer.compare(a[0],b[0]));
-        LinkedList<int[]> merged = new LinkedList<>();
+        if(intervals.length==0 || intervals==null){
+            return new int[0][0];
+        }
+        Arrays.sort(intervals, (a,b)->Integer.compare(a[0],b[0]));
+        List<int[]> ans = new ArrayList<>();
         for(int[] interval:intervals){
-            if(merged.isEmpty() || merged.getLast()[1]<interval[0]){
-                merged.add(interval);
+            if(ans.isEmpty() || ans.get(ans.size()-1)[1]<interval[0]){
+                ans.add(interval);
             }else{
-                merged.getLast()[1] = Math.max(merged.getLast()[1],interval[1]);
+                int[] last = ans.get(ans.size()-1);
+                last[1] = Math.max(last[1], interval[1]);
             }
         }
-        return merged.toArray(new int[merged.size()][]);
+        return ans.toArray(new int[ans.size()][]);
     }
 }
